deploy/k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neople-analytics-api
spec:
  selector:
    app: neople-analytics-api
  ports:
    - name: http
      port: 8000
      targetPort: http
