deploy/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neople-analytics-web
spec:
  selector:
    app: neople-analytics-web
  ports:
    - name: http
      port: 80
      targetPort: http
